kustomize/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
spec:
  replicas: 1
  template:
    spec:
      containers:
      - image: quay.io/user1/demoapp:latest
        imagePullPolicy: Always
        name: demoapp
        ports:
          - containerPort: 8080
            protocol: TCP
