kustomize/overlays/dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demoapp
spec:
  host: demoapp-article-kustomize.apps-crc.testing
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: dev-demoapp
    weight: 100
  wildcardPolicy: None
